fix : fix for 4:3 horizon

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -21,10 +21,15 @@ android {
         }
     }
 }
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 dependencies {
-    compile project(':camerakit')
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    implementation(name: 'hi', ext: 'aar')
 }
