--- a/camerakit-core/build.gradle
+++ b/camerakit-core/build.gradle
@@ -32,7 +32,22 @@ android {
         }
     }
 }
-
+task clearJar(type: Delete) {
+    delete 'build/hi.jar' //jar包的名字，随便命名
+}
+task makeJar(type:org.gradle.api.tasks.bundling.Jar) {
+    //指定生成的jar名
+    baseName 'hi'
+    //从哪里打包class文件
+    from('build/intermediates/bundles/default/')
+    //打包到jar后的目录结构
+    into('build/')
+    //去掉不需要打包的目录和文件
+    exclude('test/', 'BuildConfig.class', 'R.class')
+    //去掉R开头的文件
+    exclude{it.name.startsWith('R');}
+}
+makeJar.dependsOn(clearJar, build)
 dependencies {
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:exifinterface:27.0.2'
